// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can fetch books by shelf 1`] = `
Object {
  "bookShelf": Object {
    "__typename": "BookShelf",
    "items": Object {
      "__typename": "BookPage",
      "items": Array [
        Object {
          "__typename": "Book",
          "title": "The Damned Utd",
        },
      ],
    },
    "name": "Reading",
  },
}
`;

exports[`can fetch second page of books 1`] = `
Object {
  "books": Object {
    "__typename": "BookPage",
    "hasNextPage": true,
    "items": Array [
      Object {
        "__typename": "Book",
        "title": "ogihx",
      },
    ],
    "nextPageCursor": "eyJjb3VudFNvRmFyIjoxLCJsYXN0S2V5Ijp7InR5cGU6aWQiOiJCb29rOmZlZDRmZmI1LTczZGMtNDdlNS1iMWU3LTI4ZGU2OTExZDYzOCIsInR5cGUiOiJCb29rIiwidXBkYXRlZEF0OnR5cGU6aWQiOiIxNjI2MjY5MjY3ODgyOkJvb2s6ZmVkNGZmYjUtNzNkYy00N2U1LWIxZTctMjhkZTY5MTFkNjM4In19",
  },
}
`;

exports[`can fetch second page of books 2`] = `
Object {
  "books": Object {
    "__typename": "BookPage",
    "hasNextPage": true,
    "items": Array [
      Object {
        "__typename": "Book",
        "title": "waonw",
      },
    ],
    "nextPageCursor": "eyJjb3VudFNvRmFyIjoyLCJsYXN0S2V5Ijp7InR5cGU6aWQiOiJCb29rOmU2M2MyZmM2LTMwNTUtNDNkNy05NGYwLTU1NjM5YzVjMDU4ZSIsInR5cGUiOiJCb29rIiwidXBkYXRlZEF0OnR5cGU6aWQiOiIxNjI2MjY5MzAxNjc5OkJvb2s6ZTYzYzJmYzYtMzA1NS00M2Q3LTk0ZjAtNTU2MzljNWMwNThlIn19",
  },
}
`;

exports[`can import external book 1`] = `
Object {
  "importExternalBook": Object {
    "__typename": "Book",
    "author": "David Peace",
    "id": Any<String>,
    "shelf": Object {
      "__typename": "BookShelf",
      "id": "Reading",
    },
    "title": "The Damned Utd",
  },
}
`;

exports[`can move book between shelves 1`] = `
Object {
  "updateBook": Object {
    "__typename": "Book",
    "shelf": Object {
      "__typename": "BookShelf",
      "id": "Read",
      "name": "Read",
    },
  },
}
`;

exports[`can query single book 1`] = `
Object {
  "book": Object {
    "__typename": "Book",
    "author": "David Peace",
    "id": Any<String>,
    "rating": null,
    "shelf": Object {
      "__typename": "BookShelf",
      "id": "Reading",
      "name": "Reading",
    },
    "title": "The Damned Utd",
  },
}
`;

exports[`can search for external books 1`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 2`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 3`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 4`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 5`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 6`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 7`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 8`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 9`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 10`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;
